# region-rs

./: .cirrus.yml  .editorconfig  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  azure-pipelines.yml  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci-test.yml  ci.yml  docs.yml  release.yml
ci/: cargo-job.yml  jobs-all-rust.yml  jobs-cargo-test.yml  jobs-cross-test.yml  jobs-single-rust.yml  script.sh
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
region/: all.html  enum.Error.html  fn.alloc.html  fn.alloc_at.html  fn.lock.html  fn.protect.html  fn.protect_with_handle.html  fn.query.html  fn.query_range.html  fn.unlock.html  index.html  sidebar-items.js  struct.Allocation.html  struct.LockGuard.html  struct.Memory.html  struct.ProtectGuard.html  struct.Protection.html  struct.QueryIter.html  struct.Region.html  type.Result.html
region/alloc/: fn.alloc.html  fn.alloc_at.html  struct.Allocation.html  struct.Memory.html
region/page/: fn.ceil.html  fn.floor.html  fn.size.html  index.html
region/query/: fn.query.html  fn.query_range.html  struct.QueryIter.html
src/: alloc.rs  error.rs  lib.rs  lock.rs  macros.rs  page.rs  privilege.rs  protect.rs  protection.rs  query.rs  region.rs  util.rs  view.rs
src/os/: freebsd.rs  illumos.rs  linux.rs  macos.rs  mod.rs  netbsd.rs  openbsd.rs  unix.rs  windows.rs
src/region/: alloc.rs.html  error.rs.html  lib.rs.html  lock.rs.html  page.rs.html  protect.rs.html  query.rs.html  util.rs.html
src/region/os/: linux.rs.html  mod.rs.html  unix.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  (+3 more)
(+33 files in other folders)
