[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "Cross-platform Rust API for manipulating memory regions"
documentation = "https://docs.rs/region"
edition = "2018"
homepage = "https://github.com/darfink/region-rs"
keywords = ["region", "page", "lock", "protect", "maps"]
license = "MIT"
name = "region"
readme = "README.md"
repository = "https://github.com/darfink/region-rs"
version = "2.2.0"

[badges]
azure-devops = { project = "darfink/region-rs", pipeline = "darfink.region-rs" }

[dependencies]
bitflags = "1.0"
libc = "0.2"
take-until = "0.1.0"

[dev-dependencies]
memmap = "0.7"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach = "0.3"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["basetsd", "minwindef", "sysinfoapi", "memoryapi", "winnt"] }
