[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "Cross-platform virtual memory API"
documentation = "https://docs.rs/region"
edition = "2018"
homepage = "https://github.com/darfink/region-rs"
keywords = ["region", "page", "lock", "protect", "maps"]
license = "MIT"
name = "region"
readme = "README.md"
repository = "https://github.com/darfink/region-rs"
version = "3.0.0"

[dependencies]
bitflags = "1.0"
libc = "=0.2.107" # Locked for OpenBSD 6.9 compatibility

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach2 = "0.4"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["basetsd", "minwindef", "sysinfoapi", "memoryapi", "winnt"] }

[target."cfg(unix)".dev-dependencies]
mmap = { package = "mmap-fixed", version = "0.1.5" }
