[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "Cross-platform virtual memory API"
documentation = "https://docs.rs/region"
edition = "2018"
homepage = "https://github.com/darfink/region-rs"
keywords = ["region", "page", "lock", "protect", "maps"]
license = "MIT"
name = "region"
readme = "README.md"
repository = "https://github.com/darfink/region-rs"
version = "3.0.2"

[dependencies]
bitflags = "1.0"
libc = "0.2.153"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach2 = "0.4"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
]

[target."cfg(unix)".dev-dependencies]
mmap = { package = "mmap-fixed", version = "0.1.6" }
